--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Relógio Escuro</title>
     <style>
         body {
-            font-family: 'Courier New', monospace;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: #1a1a1a;
-            color: #ffffff;
+            background: #313131;
+            color: #F1DFD0;
             text-align: center;
             min-height: 150px;
             display: flex;
@@ -24,7 +24,7 @@
             font-weight: bold;
             letter-spacing: 2px;
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
-            color: #ffffff;
+            color: #F1DFD0;
         }
         
         @media (max-width: 600px) {
