--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             justify-content: center;
             align-items: center;
             border-radius: 8px;
+            overflow: hidden;
         }
         
         #clock {
