--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relógio Escuro</title>
     <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif;
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        html, body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif;
             background: #313131;
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
             color: #F1DFD0;
-            text-align: center;
-            min-height: 95px;
             display: flex;
             justify-content: center;
             align-items: center;
-            border-radius: 8px;
-            overflow: hidden;
         }
         
         #clock {
@@ -27,7 +30,7 @@
             color: #F1DFD0;
         }
         
-        @media (max-width: 180px) {
+        @media (max-width: 600px) {
             #clock {
                 font-size: 2.5em;
             }
