--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             const minutes = now.getMinutes().toString().padStart(2, '0');
             const seconds = now.getSeconds().toString().padStart(2, '0');
             
-            document.getElementById('clock').textContent = hours + ':' + minutes + ':' + seconds;
+            document.getElementById('clock').textContent = hours + ':' + minutes;
         }
         
         window.onload = function() {
