--- a/widget.html
+++ b/widget.html
@@ -33,7 +33,7 @@
         }
 
         .container {
-            background: #342046;
+            color: #89552A;
             display: flex;
             align-items: center;
             gap: 10px;
