--- a/clima-dia.html
+++ b/clima-dia.html
@@ -71,7 +71,7 @@
     <script>
         // SUBSTITUA 'SUA_API_KEY' pela sua chave da WeatherAPI
         const API_KEY = '9cadb366e05e48beb60181227251008';
-        const CIDADE = 'São Carlos, SP';
+        const CIDADE = '-22.0175,-47.89083';;
         
         async function buscarClima() {
             try {
