--- a/clima-dia.html
+++ b/clima-dia.html
@@ -16,6 +16,7 @@
             overflow: hidden;
             background-color: #transparent;
             color: #F1DFD0;
+            background-color: #313131;
         }
         .weather-container {
             max-width: 400px;
