--- a/relogio-contador-diario.html
+++ b/relogio-contador-diario.html
@@ -62,10 +62,10 @@
 <body>
     <div id="clock">00:00:00</div>
 
-    <div class="container">
+   <!--<div class="container">
         <span id="label" class="label">Atualiza em:</span>
         <span id="countdown">00:00:00</span>
-    </div>
+    </div>-->
     
     <script>
         DAY_START = 6; //Média horária do nascer-do-sol
