--- a/relogio-contador-diario.html
+++ b/relogio-contador-diario.html
@@ -13,7 +13,7 @@
 
         html, body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif;
-            background: #2f3437;
+            background-color: transparent !important;
             width: 100%;
             height: 100vh;
             overflow: hidden;
