--- a/relogio-contador-diario.html
+++ b/relogio-contador-diario.html
@@ -63,13 +63,13 @@
     <div id="clock">00:00:00</div>
 
    <div class="container">
-        <span id="label" class="label">Toque de recolher:</span>
+        <span id="label" class="label">Em repouso:</span>
         <span id="countdown">00:00:00</span>
     </div>
     
     <script>
         DAY_START = 4; //Hora de levantar (4h)
-        DAY_END = 21; //Tempo limite para completar as zonas (21h)
+        DAY_END = 21; //Tempo limite para completar as zonas de ação (21h)
         
         function updateClock() {
             const now = new Date();
