--- a/contador-diario.html
+++ b/contador-diario.html
@@ -13,8 +13,8 @@
         
         html, body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif;
-            background: #F1DFD0;
-            color: #342046;
+            background:  #383836;
+            color: #F1DFD0;
             width: 100%;
             overflow: hidden;
             display: flex;
